# NexPyRS

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  GITHUB_PAGES_DEPLOYMENT.md  README.md  bootstrap.ps1  diagnose.bat  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  manage.py  nexpyrs.bat  next.config.js  package-lock.json  package.json  pyproject.toml  start.bat  start.sh  tsconfig.json
.github/workflows/: ci.yml  deploy-pages.yml
api/: Dockerfile  Dockerfile.django  Dockerfile.fastapi  README.md  main.py  pyproject.toml
api/app/: main.py
api/app/api/api_v1/endpoints/: users.py
api/app/core/: config.py
api/app/db/: session.py
api/django_app/: Dockerfile
api/django_app/config/: settings.py  urls.py
api/django_app/core/: tests.py  views.py
api/fastapi_app/app/: initial_data.py
api/fastapi_app/app/api/: deps.py
api/fastapi_app/app/api/api_v1/: api.py
api/fastapi_app/app/api/api_v1/endpoints/: login.py
api/fastapi_app/app/models/: user.py
api/fastapi_app/tests/: test_main.py
app/: globals.css  page.tsx
app/contribute/: page.tsx
app/grpc-test/: page.tsx
components/: index.html
docs/: README.md  _sidebar.md  architecture.md  deployment.md  development.md  getting-started.md  index.html  index.txt
docs/getting-started/: index.txt
grpcsvc/: Dockerfile  pyproject.toml  server.py
privacy/: index.html  index.txt
rustsvc/: Cargo.toml  Dockerfile
rustsvc/src/: main.rs
scripts/: local_dev_setup_uv.ps1  setup_desktop.ps1  setup_desktop.sh  start_unix.sh  start_windows.bat
src-tauri/: tauri.conf.json
traefik/: dynamic.yml
web/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  preview-local.js  tailwind.config.js  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.test.tsx  page.tsx
(+22 files in other folders)
