[project]
name = "nexpyrs-monorepo"
version = "0.1.0"
description = "NexPyRS Monorepo Workspace"
requires-python = ">=3.11"
dependencies = [
    "typer"
]

[project.scripts]
nexpyrs = "manage:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manage.py"]

[tool.uv]
members = ["api", "grpcsvc"]
