[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexpyrs-monorepo"
version = "0.1.0"
description = "NexPyRS Monorepo Workspace"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "pytest",
    "httpx"
]

[project.scripts]
nexpyrs = "manage:app"

[tool.hatch.build.targets.wheel]
packages = ["manage.py"]

[tool.uv.workspace]
members = ["api", "grpcsvc"]
