[project]
name = "nexpyrs-api"
version = "0.1.0"
description = "NexPyRS FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.8",
    "asyncpg>=0.28.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "tenacity"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
