[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexpyrs-monorepo"
version = "0.1.0"
description = "NexPyRS Monorepo Workspace"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "pytest",
    "httpx",
    "uvicorn[standard]",
    "fastapi",
    "django",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=21.2.0"
]

[project.scripts]
nexpyrs = "manage:app"

[tool.hatch.build.targets.wheel]
packages = ["manage.py"]
